# Urban-Growth-AI

./: .gitignore  environment.yml  pyproject.toml
configs/: project.yaml
docs/: metropolitan_coverage.md  spatial_units.md
notebooks/: 01_potential_score_analysis.ipynb
scripts/: analyze_inference_potential_score.py  build_base_dataset.py  build_city_boundaries.py  build_city_grids.py  build_demographic_block_features.py  build_demographic_features.py  build_denue_service_features.py  build_economic_features.py  build_inference_dataset.py  build_modeling_dataset.py  build_road_features.py  build_service_features.py  build_spatial_features.py  build_temporal_demographic_features.py  build_temporal_land_cover.py  build_urban_growth_potential_score.py  build_urbanization_labels.py  compare_potential_models.py  export_top_potential_cells.py  score_inference_dataset.py  train_advanced_models.py  train_baseline_model.py  validate_metropolitan_coverage.py
tests/: test_advanced_models.py  test_baseline_model.py  test_boundaries.py  test_city_registry.py  test_dataset_builder.py  test_demographic_features.py  test_denue_service_dataset_integration.py  test_denue_service_features.py  test_economic_features.py  test_grids.py  test_inference_dataset.py  test_metropolitan_registry.py  test_model_comparison.py  test_modeling_dataset.py  test_potential_exports.py  test_potential_score.py  test_road_features.py  test_service_features.py  test_spatial_features.py  test_temporal_demographic_features.py  test_temporal_land_cover.py  test_urbanization_labels.py
(+24 files in other folders)
