[project]
name = "urban-growth-ai"
version = "0.1.0"
description = "Geospatial machine learning project for analyzing and predicting urban expansion."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "data",
    "reports/figures",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
